modal overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1077,6 +1077,10 @@ img.u-thumb-img {
   margin: auto;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 /* css for mobile, tab devices */
 
 @media (max-width: 991px) {
